<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--
    <PreferenceCategory
        android:title="@string/pref_category_general"
        app:iconSpaceReserved="false">


        <android.support.v7.preference.EditTextPreference
            android:capitalize="words"
            android:defaultValue=""
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:inputType="textCapWords"
            android:key="edit_text_name_preference"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_edit_text_title_display_name" />

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_speaker_notes_black_24dp"
            android:key="check_box_preference_username_set"
            android:summaryOff="@string/check_box_pref_get_display_name_summary_off"
            android:summaryOn="@string/check_box_pref_get_display_name_summary_on"
            android:title="@string/check_box_pref_get_display_name_title" />

    </PreferenceCategory> -->
    <PreferenceCategory android:title="@string/preference_category_flash_cards"
        app:iconSpaceReserved="false">


        <android.support.v7.preference.ListPreference
            android:defaultValue="English"
            android:entries="@array/languages_choice"
            android:entryValues="@array/languages_choice"
            android:icon="@drawable/ic_up_down_arrow_black"
            android:key="list_preference_card_language_choice"
            android:title="@string/list_pref_card_start_language" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:key="switch_show_card_help_preference"
            android:summaryOff="@string/help_screen_off_preference_description"
            android:summaryOn="@string/help_screen_on_preference_description"
            android:title="@string/switch_preference_show_card_help" />

    </PreferenceCategory>
    <!-- app:iconSpaceReserved="false" -->


</android.support.v7.preference.PreferenceScreen>