<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_background_light"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="3"
        android:contentDescription="@string/mainscreen_logo_image_description"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:scaleType="center"
        app:srcCompat="@drawable/owl_background_image_icon" />

    <TextView
        android:id="@+id/mainScreenTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/our_world_languages_title_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/english_to_chinese_flash_cards_title_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="81dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/level_1_title_text"
        android:textColor="@color/earthGreen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/title_enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/earthGreen"
        android:onClick="goToMenuPage"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/begin_text"
        android:contentDescription="@string/begin_text"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/by_dcf_apps_text"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>